Added properties,which loads from config by annotations